src/test/deca/codegen/valid/sansObjet/divideByZero.deca
{
	int denominateur = 0;
	int numerateur = 1;
	
	println(numerateur /denominateur);
	
}