src/test/deca/codegen/invalid/sansObjetPourScript/noCheck/noCheckArith.deca
{
    int x = 1;
    int y = 0;

    println(x/y);
    println(x%y);

}
